client/src/styles/base/_z-index.scss
$z-index: (
  bottomnav     : 1000,
  searchbar     : 1500,
  toolbar       : 2000,
  contextmenu   : 3000,
  dropdown      : 4000,
  slideout      : 5000,
  modal         : 6000,
  a2hs          : 7000,
  notification  : 8000
);

@function z-index($key) {
  @return map-get($z-index, $key);
}

@mixin z-index($key) {
  z-index: z-index($key);
}

//@include z-index(slideout);

//https://jonsuh.com/blog/organizing-z-index-with-sass/
//https://www.sitepoint.com/better-solution-managing-z-index-sass/

